# vasyaapp

./: .gitkeep  CHANGELOG.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: ANDROID_BUILD.md
.github/workflows/: landing-redeploy.yml  release.yml
docs/api/: README.md
docs/changelog/: v0.7.6.md  v0.7.7.md
src/: App.css  App.tsx  main.tsx
src-tauri/: .dockerignore  Cargo.toml  Dockerfile.server  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs
src-tauri/src/commands/: auth.rs  calls.rs  group_calls.rs  local_api.rs  media_types.rs  messages.rs  mod.rs  peer_resolve.rs  settings.rs  stt.rs
src-tauri/src/telegram/: client_manager.rs  encrypted_session.rs  mod.rs
src-tauri/stt-sidecar/: Cargo.toml
src-tauri/tests/: local_api.rs
src-tauri/vasya-core/: Cargo.toml
src-tauri/vasya-core/src/: events.rs  lib.rs  media.rs  stt.rs
src-tauri/vasya-core/src/telegram/: auth.rs  call_state.rs  calls.rs  client_manager.rs  dh.rs  encrypted_session.rs  group_call_state.rs  group_calls.rs  master_key.rs  mod.rs  peer.rs  updates.rs
src-tauri/vasya-mcp/: README.md  package-lock.json  package.json  tsconfig.json
src-tauri/vasya-mcp/src/: index.ts
src-tauri/vasya-server/: Cargo.toml  README.md
src-tauri/vasya-server/src/: accounts.rs  agent_keys.rs  audit.rs  auth.rs  context.rs  dto.rs  error.rs  flood.rs  graphql.rs  idempotency.rs  lib.rs  main.rs  openapi.rs  peer.rs  policy.rs  rate_limit.rs
src-tauri/vasya-server/src/routes/: accounts.rs  agent_keys.rs  calls.rs  chats.rs  events.rs  folders.rs  graphql_http.rs  media.rs  messages.rs  mod.rs  search.rs  storage_mode.rs  stt.rs  stubs.rs  telegram_auth.rs  telegram_creds.rs  topics.rs
src/components/Accounts/: AccountSwitcher.tsx
src/components/Auth/: LoginForm.css  LoginForm.tsx  ServerConnect.tsx
src/components/Chat/: AvatarViewer.tsx  ChatHeader.tsx  ChatInfoPanel.tsx  ChatList.tsx  ChatListItem.tsx  NewChatButton.tsx  TopicList.tsx
src/components/Layout/: MainLayout.css  MainLayout.tsx
src/components/Messages/: ForwardDialog.tsx  ImageViewer.tsx  MarkdownRenderer.tsx  MediaAttachment.css  MediaAttachment.tsx  MessageInput.css  MessageInput.tsx  MessageList.css  MessageList.tsx  VoiceMessage.tsx
src/components/Profile/: MyQrCode.css  MyQrCode.tsx
src/components/Settings/: AccountSettings.css  AccountSettings.tsx
src/hooks/: useMediaQueue.ts  useNotifications.ts  useTauriCommand.ts  useTauriEvent.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  ru.ts
src/store/: callStore.ts  folderStore.ts  groupCallStore.ts  settingsStore.ts  sttStore.ts  themeStore.ts
src/transport/: http.ts  index.ts  tauri.ts  types.ts
src/types/: telegram.ts
