[package]
name = "telegram-client"
version = "0.8.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["vasya-core", "vasya-server"]
# Standalone sidecar crates with their own lockfiles — not workspace members.
exclude = ["stt-sidecar", "voip-sidecar"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "telegram_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# Telegram engine (Tauri-free, shared with the server)
vasya-core = { path = "vasya-core" }
grammers-client = "0.8"
grammers-session = "0.8"
grammers-mtsender = "0.8"
grammers-tl-types = "0.8"

# Database - используем sqlite из grammers-session чтобы избежать конфликтов
sqlite = "0.37"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID для account_id
uuid = { version = "1.0", features = ["v4", "serde"] }
percent-encoding = "2"

# Hashing
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] }
tracing-appender = "0.2"

# Regex для config.rs
regex = "1.11"
lazy_static = "1.5"

# JSON5 для config.rs
json5 = "0.4"

tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"

# HTTP client for Deepgram STT API and RemoteStorage
# Use rustls instead of openssl for Android compatibility
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async trait for storage abstraction
async-trait = "0.1"

# URL parsing for SSRF validation
url = "2"

# Randomness for call commands (DH itself lives in vasya-core)
num-integer = "0.1"
rand = "0.8"

# Embedded local API server (desktop only; keeps iOS/Android builds lean).
# Cargo.toml can't use tauri's `desktop` cfg alias, so spell the target out.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
vasya-server = { path = "vasya-server" }
axum = "0.8"

[dev-dependencies]
tempfile = "3"
