[package]
name = "stt-sidecar"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

[dependencies]
whisper-rs = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
